overc-conftools: Change eth0 -> veth0 for the containers
The eth0 name can colide with certain physical interface names using
SDIO chips.

Signed-off-by: Jason Wessel <jason.wessel@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/overc-conftools/source/network_prime/templates/network_prime.sh.erb
+++ b/meta-cube/recipes-support/overc-conftools/source/network_prime/templates/network_prime.sh.erb
@@ -13,4 +13,4 @@
 ovs-vsctl --may-exist add-br br-int
 
 # Add the virtual eth to the br-int
-ovs-vsctl --may-exist add-port br-int eth0
+ovs-vsctl --may-exist add-port br-int veth0
